--- a/jobregistration.html
+++ b/jobregistration.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
+    <style>
+    body
+    {
+        font-size:2em;
+    }
+    </style>
 </head>
 <body bgcolor="yellow">
     <form name="f1">
