background color changed to blue

--- a/jobregistration.html
+++ b/jobregistration.html
@@ -14,7 +14,7 @@
     }
     </style>
 </head>
-<body bgcolor="yellow">
+<body bgcolor="blue">
     <form name="f1">
     <fieldset>
         <legend>Job Application form</legend>
