--- a/jobregistration.html
+++ b/jobregistration.html
@@ -14,7 +14,7 @@
     }
     </style>
 </head>
-<body bgcolor="blue">
+<body bgcolor="yellow">
     <form name="f1">
     <fieldset>
         <legend>Job Application form</legend>
@@ -37,6 +37,7 @@
     <br />
     Description: <textarea cols="50" rows="10"></textarea><br />
     <input type="reset" /><input type="submit" />
-    </fieldset></form>
+    </fieldset></form><br />
+    <table align=center width=100%><tr><td>Now users can play games</td></tr></table>
 </body>
 </html>
