--- a/jobregistration.html
+++ b/jobregistration.html
@@ -38,6 +38,8 @@
     Description: <textarea cols="50" rows="10"></textarea><br />
     <input type="reset" /><input type="submit" />
     </fieldset></form><br />
-    <table align=center width=100%><tr><td>Now users can play games</td></tr></table>
+    <table align=center width=100%><tr><td>Now users can play games</td></tr>
+    <tr><td>Improved on the game</td></tr>
+    </table>
 </body>
 </html>
